# cli-timer

./: Cargo.toml
src/: '  \  main.rs  main.rs.semi.ini
