[package]
name = "cli-timer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "4"
clap = {version = "4.4.6", features = ["derive"]} 
rust-ini = "0.19"
atomic-write-file = "0.1.0"
beep = "0.3.0"
dimensioned = "0.8.0"
rodio = "0.17.1"
