[package]
name = "cli-timer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "4"
clap = {version = "4.4.6", features = ["derive"]} 
rodio = "0.17.1"

[[bin]]
edition = "2021"
name = "cli-timer"
path = "src/main.rs"
